fix bug #29975 (memory leaks when set_error_handler() is used inside error handler)